正式1.0版本发布

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-scroll-view",
+  "name": "react-scroll-view-xy",
   "version": "1.0.0",
   "description": "react-scroll-view React component",
   "main": "lib/index.js",
